--- a/index.html
+++ b/index.html
@@ -4,7 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="./images/favicon-32x32.png"
+      type="image/x-icon"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
     <title>Time tracking dashboard</title>
   </head>
-  <body></body>
+  <body>
+    <div class="info-div">
+      <div class="jeremy-div">
+        <img src="./images/image-jeremy.png" alt="jeremy" class="jeremy-img" />
+        <div class="jeremy-report">
+          <span class="report">Report for</span>
+          <p class="par-jeremy">Jeremy Robson</p>
+        </div>
+      </div>
+      <ul class="list">
+        <li>Daily</li>
+        <li>Weekly</li>
+        <li>Monthly</li>
+      </ul>
+    </div>
+    <div></div>
+    <script src="./index.js"></script>
+  </body>
 </html>
