--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Time tracking dashboard</title>
   </head>
   <body>
-    <div class="info-div">
+    <div class="info-div container-margin">
       <div class="jeremy-div">
         <img src="./images/image-jeremy.png" alt="jeremy" class="jeremy-img" />
         <div class="jeremy-report">
@@ -34,7 +34,13 @@
         <li>Monthly</li>
       </ul>
     </div>
-    <div></div>
+    <div class="work-div container-margin"></div>
+    <div class="work-info container-margin">
+      <p class="par-work">Work</p>
+      <img src="./images/icon-ellipsis.svg" alt="dots" class="dots-img" />
+      <p class="par-hrs">32hrs</p>
+      <span class="lastweek-span">Last Week - 36hrs</span>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
