added rest of the cards html and style momentaneamente

--- a/index.html
+++ b/index.html
@@ -34,12 +34,65 @@
         <li>Monthly</li>
       </ul>
     </div>
-    <div class="work-div container-margin"></div>
-    <div class="work-info container-margin">
-      <p class="par-work">Work</p>
-      <img src="./images/icon-ellipsis.svg" alt="dots" class="dots-img" />
-      <p class="par-hrs">32hrs</p>
-      <span class="lastweek-span">Last Week - 36hrs</span>
+    <!--WORK-->
+    <div class="box1">
+      <div class="img-div container-margin"></div>
+      <div class="work-info container-margin">
+        <p class="par-work">Work</p>
+        <img src="./images/icon-ellipsis.svg" alt="dots" class="dots-img" />
+        <p class="par-hrs">32hrs</p>
+        <span class="lastweek-span">Last Week - 36hrs</span>
+      </div>
+    </div>
+    <!--PLAY-->
+    <div class="box1">
+      <div class="img-div container-margin"></div>
+      <div class="work-info container-margin">
+        <p class="par-work">Work</p>
+        <img src="./images/icon-ellipsis.svg" alt="dots" class="dots-img" />
+        <p class="par-hrs">32hrs</p>
+        <span class="lastweek-span">Last Week - 36hrs</span>
+      </div>
+    </div>
+    <!--STUDY-->
+    <div class="box1">
+      <div class="img-div container-margin"></div>
+      <div class="work-info container-margin">
+        <p class="par-work">Work</p>
+        <img src="./images/icon-ellipsis.svg" alt="dots" class="dots-img" />
+        <p class="par-hrs">32hrs</p>
+        <span class="lastweek-span">Last Week - 36hrs</span>
+      </div>
+    </div>
+    <!--EXERCISE-->
+    <div class="box1">
+      <div class="img-div container-margin"></div>
+      <div class="work-info container-margin">
+        <p class="par-work">Work</p>
+        <img src="./images/icon-ellipsis.svg" alt="dots" class="dots-img" />
+        <p class="par-hrs">32hrs</p>
+        <span class="lastweek-span">Last Week - 36hrs</span>
+      </div>
+    </div>
+    <!--SOCIAL-->
+    <div class="box1">
+      <div class="img-div container-margin"></div>
+      <div class="work-info container-margin">
+        <p class="par-work">Work</p>
+        <img src="./images/icon-ellipsis.svg" alt="dots" class="dots-img" />
+        <p class="par-hrs">32hrs</p>
+        <span class="lastweek-span">Last Week - 36hrs</span>
+      </div>
+    </div>
+    <!--SELFCARE-->
+    <div class="box1">
+      <div class="img-div container-margin"></div>
+      <div class="work-info container-margin">
+        <p class="par-work">Work</p>
+        <img src="./images/icon-ellipsis.svg" alt="dots" class="dots-img" />
+        <p class="par-hrs">32hrs</p>
+        <span class="lastweek-span">Last Week - 36hrs</span>
+      </div>
     </div>
     <script src="./index.js"></script>
   </body>
