finished style desktop html

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </div>
       </div>
       <ul class="list">
-        <li>Daily</li>
-        <li>Weekly</li>
+        <li class="list-item">Daily</li>
+        <li class="list-item">Weekly</li>
         <li>Monthly</li>
       </ul>
     </div>
