--- a/index.html
+++ b/index.html
@@ -34,68 +34,8 @@
         <li class="js-monthly js-li list-item">Monthly</li>
       </ul>
     </div>
-    <!--WORK-->
-    <div class="js-info">
-      <!-- <div class="regular-card">
-        <div class="work camb container-margin"></div>
-        <div class="work-info container-margin">
-          <p class="par-work">Work</p>
-          <img src="./images/icon-ellipsis.svg" alt="dots" class="dots-img" />
-          <p class="par-hrs">32hrs</p>
-          <span class="lastweek-span">Last Week - 36hrs</span>
-        </div>
-      </div> -->
-      <!--PLAY-->
-      <!-- <div class="regular-card">
-        <div class="play container-margin"></div>
-        <div class="work-info container-margin">
-          <p class="par-work">Play</p>
-          <img src="./images/icon-ellipsis.svg" alt="dots" class="dots-img" />
-          <p class="par-hrs">10hrs</p>
-          <span class="lastweek-span">Last Week - 8hrs</span>
-        </div>
-      </div> -->
-      <!--STUDY-->
-      <!-- <div class="regular-card">
-        <div class="study container-margin"></div>
-        <div class="work-info container-margin">
-          <p class="par-work">Study</p>
-          <img src="./images/icon-ellipsis.svg" alt="dots" class="dots-img" />
-          <p class="par-hrs">4hrs</p>
-          <span class="lastweek-span">Last Week - 7hrs</span>
-        </div>
-      </div> -->
-      <!--EXERCISE-->
-      <!-- <div class="regular-card">
-        <div class="exercise container-margin"></div>
-        <div class="work-info container-margin">
-          <p class="par-work">Exercise</p>
-          <img src="./images/icon-ellipsis.svg" alt="dots" class="dots-img" />
-          <p class="par-hrs">4hrs</p>
-          <span class="lastweek-span">Last Week - 5hrs</span>
-        </div>
-      </div> -->
-      <!--SOCIAL-->
-      <!-- <div class="regular-card">
-        <div class="social container-margin"></div>
-        <div class="work-info container-margin">
-          <p class="par-work">Social</p>
-          <img src="./images/icon-ellipsis.svg" alt="dots" class="dots-img" />
-          <p class="par-hrs">5hrs</p>
-          <span class="lastweek-span">Last Week - 10hrs</span>
-        </div>
-      </div> -->
-      <!--SELFCARE-->
-      <!-- <div class="regular-card">
-        <div class="selfcare container-margin"></div>
-        <div class="work-info container-margin">
-          <p class="par-work">Self Care</p>
-          <img src="./images/icon-ellipsis.svg" alt="dots" class="dots-img" />
-          <p class="par-hrs">2hrs</p>
-          <span class="lastweek-span">Last Week - 2hrs</span>
-        </div>
-      </div> -->
-    </div>
+    <!--CARDS-->
+    <div class="js-info"></div>
     <script src="./index.js"></script>
   </body>
 </html>
