added footer html and style, cleaned code css

--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
     </div>
     <!--CARDS-->
     <div class="js-info"></div>
+    <footer class="footer">
+      <div class="attribution">
+        <span>Challenge by</span>
+        <a
+          href="https://www.frontendmentor.io?ref=challenge"
+          target="_blank"
+          class="link"
+          >Frontend Mentor</a
+        >. <span>Coded by</span>
+        <a href="https://github.com/mdanieladla" target="_blank" class="link"
+          >Daniela Darnea</a
+        >.
+      </div>
+    </footer>
     <script src="./index.js"></script>
   </body>
 </html>
