added style improvments

--- a/index.html
+++ b/index.html
@@ -20,22 +20,28 @@
     <title>Time tracking dashboard</title>
   </head>
   <body>
-    <div class="info-div container-margin">
-      <div class="jeremy-div">
-        <img src="./images/image-jeremy.png" alt="jeremy" class="jeremy-img" />
-        <div class="jeremy-report">
-          <span class="report">Report for</span>
-          <p class="par-jeremy">Jeremy Robson</p>
+    <div class="container">
+      <div class="info-div container-margin">
+        <div class="jeremy-div">
+          <img
+            src="./images/image-jeremy.png"
+            alt="jeremy"
+            class="jeremy-img"
+          />
+          <div class="jeremy-report">
+            <span class="report">Report for</span>
+            <p class="par-jeremy">Jeremy Robson</p>
+          </div>
         </div>
+        <ul class="list">
+          <li class="js-daily js-li list-item">Daily</li>
+          <li class="js-weekly js-li list-item active">Weekly</li>
+          <li class="js-monthly js-li list-item">Monthly</li>
+        </ul>
       </div>
-      <ul class="list">
-        <li class="js-daily js-li list-item">Daily</li>
-        <li class="js-weekly js-li list-item active">Weekly</li>
-        <li class="js-monthly js-li list-item">Monthly</li>
-      </ul>
+      <!--CARDS-->
+      <div class="js-info"></div>
     </div>
-    <!--CARDS-->
-    <div class="js-info"></div>
     <footer class="footer">
       <div class="attribution">
         <span>Challenge by</span>
